Add test suites for LoginForm and RegisterFrom components

--- a/frontend/tsconfig.app.json
+++ b/frontend/tsconfig.app.json
@@ -27,7 +27,7 @@
     "**/*.test.ts",
     "**/*.test.tsx",
     "src/**/*.test.ts",
-    "src/**/*.test.tsx",
-    "testSetup.ts"
+    "src/**/*.test.tsx"
+    // "testSetup.ts"
   ]
 }
