--- a/backend/.env.test
+++ b/backend/.env.test
@@ -1,5 +1,5 @@
 PORT=5000
 NODE_ENV=test
-MONGODB_URI=mongodb://localhost:27017/script-to-ui-test
+MONGODB_URI=mongodb://localhost:27017/fullstack-trainer-test
 JWT_SECRET=test_secret_key
 REDIS_URL=redis://localhost:6379
