--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,10 +12,15 @@
     "test": "vitest run"
   },
   "dependencies": {
+    "@hookform/resolvers": "^4.1.3",
+    "@tailwindcss/vite": "^4.0.9",
     "axios": "^1.8.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-router-dom": "^7.2.0"
+    "react-hook-form": "^7.54.2",
+    "react-router-dom": "^7.2.0",
+    "tailwindcss": "^4.0.9",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
