--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,16 +9,20 @@
     "typecheck": "tsc -b",
     "lint": "eslint . --ext .ts,.tsx",
     "preview": "vite preview",
-    "test": "vitest run"
+    "test": "vitest run",
+    "test:coverage": "vitest run --coverage",
+    "test:ui": "vitest --ui"
   },
   "dependencies": {
     "@hookform/resolvers": "^4.1.3",
     "@tailwindcss/vite": "^4.0.9",
     "axios": "^1.8.1",
+    "lucide-react": "^0.479.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-router-dom": "^7.2.0",
+    "react-toastify": "^11.0.5",
     "tailwindcss": "^4.0.9",
     "zod": "^3.24.2"
   },
@@ -30,6 +34,8 @@
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react-swc": "^3.8.0",
+    "@vitest/coverage-v8": "^3.0.8",
+    "@vitest/ui": "^3.0.8",
     "axios-mock-adapter": "^2.1.0",
     "eslint": "^9.21.0",
     "eslint-plugin-react-hooks": "^5.0.0",
