--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,8 @@
   "dependencies": {
     "@hookform/resolvers": "^4.1.3",
     "@tailwindcss/vite": "^4.0.9",
+    "@tanstack/react-query": "^5.68.0",
+    "@tanstack/react-query-devtools": "^5.68.0",
     "axios": "^1.8.1",
     "lucide-react": "^0.479.0",
     "react": "^19.0.0",
@@ -24,7 +26,8 @@
     "react-router-dom": "^7.2.0",
     "react-toastify": "^11.0.5",
     "tailwindcss": "^4.0.9",
-    "zod": "^3.24.2"
+    "zod": "^3.24.2",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
@@ -36,6 +39,7 @@
     "@vitejs/plugin-react-swc": "^3.8.0",
     "@vitest/coverage-v8": "^3.0.8",
     "@vitest/ui": "^3.0.8",
+    "@welldone-software/why-did-you-render": "^10.0.1",
     "axios-mock-adapter": "^2.1.0",
     "eslint": "^9.21.0",
     "eslint-plugin-react-hooks": "^5.0.0",
